# ZeldaNSQ

./: .gitignore  CMakeLists.txt  README.md  makefile
data/texts/: english_vita.txt  french_vita.txt
res/: template.xml
src/: main.cpp
src/config/: Action.cpp  Action.h  AudioHelper.cpp  AudioHelper.h  ConfigurationManager.cpp  ConfigurationManager.h  KeyBinder.cpp  KeyBinder.h  TextHelper.cpp  TextHelper.h
src/engine/audio/: AudioConfiguration.cpp  AudioConfiguration.h  AudioManager.cpp  AudioManager.h
src/engine/common/: Common.h
src/engine/renderer/: CircularTransition.cpp  CircularTransition.h  SimpleTransition.cpp  SimpleTransition.h  Surface.cpp  Surface.h
src/engine/resources/: ResourceManager.cpp  ResourceManager.h  WFile.cpp  WFile.h  WImage.cpp  WImage.h  WMusic.cpp  WMusic.h  WResource.cpp  WResource.h  WSound.cpp  WSound.h
src/engine/texts/: Text.cpp  Text.h  TextConfiguration.cpp  TextConfiguration.h  TextManager.cpp  TextManager.h
src/engine/util/geometry/: BoundingBox.cpp  BoundingBox.h
src/engine/util/list/: List.cpp  List.h  ListCell.cpp  ListCell.h  Listable.cpp  Listable.h
src/engine/util/physic/: SlideManager.cpp  SlideManager.h
src/engine/util/tree/: Node.h  (+3 more)
src/engine/window/: Event.cpp  Event.h  Timer.cpp  Timer.h  WindowManager.cpp  WindowManager.h
src/game/: GlobalSave.cpp  GlobalSave.h  MainController.cpp  MainController.h  Save.cpp  Save.h
src/game/algo/: AStar.cpp  AStar.h
src/game/content/: CommonGame.h
src/game/ending/: EndingController.cpp  EndingController.h
src/game/game/: GameController.cpp  GameController.h
src/game/logo/: Logo.cpp  Logo.h  LogoController.cpp  LogoController.h
src/game/menu/: MenuController.cpp  MenuController.h
src/game/opening/: Opening.cpp  Opening.h  OpeningController.cpp  OpeningController.h  OpeningTextArea.cpp  OpeningTextArea.h
src/game/title/: Title.cpp  Title.h  TitleController.cpp  TitleController.h
(+382 files in other folders)
